--- a/src/components/status/status.scss
+++ b/src/components/status/status.scss
@@ -165,15 +165,22 @@ $status-margin: 0.75em;
     align-content: baseline;
     font-size: 12px;
     line-height: 160%;
+    margin-top: 0.2em;
+    line-height: 130%;
+
     max-width: 100%;
     align-items: stretch;
   }
 
   & .reply-to-popover,
-  & .reply-to-no-popover {
+  & .reply-to-no-popover,
+  & .mentions {
     min-width: 0;
     margin-right: 0.4em;
     flex-shrink: 0;
+  }
+  .reply-glued-label {
+    margin-right: 0.5em;
   }
 
   .reply-to-popover {
@@ -209,7 +216,6 @@ $status-margin: 0.75em;
   & .reply-to {
     white-space: nowrap;
     position: relative;
-    padding-right: 0.25em;
   }
 
   & .mentions-text,
